#8 play quiz when user want to play their quiz that they created and another quiz that another users created #Display quizzes to display list of the quiz title that users created

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -106,7 +106,13 @@ body {
 .create-question{
     width: 50%;
 }
+.bg-correct{
+    background: rgb(0, 255, 128);
+}
 
+.bg-incorrect{
+    background: rgb(222, 16, 54);
+}
 
 @media (max-width: 768px){
     .create-question{
