--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -25,9 +25,10 @@
                 <button id="answer-D" onclick="clickAnswer('D')" class="grid-item">My Answer D</button>
             </div>
         </div>
+        <h1 class ="text-center w-100" id="no-data"> No question Hear! </h1>
     </div>
     <div class="container show-score mt-5">
-        <button class = "b-radius borer-1 px-3 py-1  border-success" id="create">Show Corrections</button>
+        <button class = "b-radius borer-1 px-3 py-1  border-success" id="good-bad-answer">Show Corrections</button>
         <h1 class = "text-center m-auto ">Your score is:</h1>
         <h1 class = "score m-auto text-center w-auto"> 90% </h1>
 
@@ -36,6 +37,24 @@
             <button class = "b-radius borer-1 border-success px-3 py-1 -3" id="create">Play again</button>
         </div>
     </div>
+    <div class="container" id="show-good-bad-answers">
+        <div class="bg-secondary mb-4 p-lg-4 b-radius p-sm-1">
+            <h3 class="p-2  mb-4 "> Title of Question </h3>
+            <hr>
+            <p class="p-2 form-control bg-correct">Answer1 </p>
+            <p class="p-2 form-control" >Answer2</p>
+            <p class="p-2 form-control bg-incorrect ">Answer1 </p>
+            <p class="p-2 form-control" >Answer2</p>
+        </div>
+        <div class="bg-secondary p-lg-4 b-radius p-sm-1">
+            <h3 class="p-2  mb-4 "> Title of Question </h3>
+            <hr>
+            <p class="p-2 form-control bg-correct">Answer1 </p>
+            <p class="p-2 form-control" >Answer2</p>
+            <p class="p-2 form-control bg-incorrect ">Answer1 </p>
+            <p class="p-2 form-control" >Answer2</p>
+        </div>
+      </div>
     <script src="play_quiz_view.js"></script>
 </body>
 
