--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,213 @@
-.b-radius{
-    border-radius: 10px;
-}
+        .b-radius {
+            border-radius: 10px;
+        }
+        /* ------------------------------Menu--------------------- */
+        
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
+            background-color: #fff;
+            position: sticky;
+            top: -5px;
+        }
+        
+        ul img {
+            margin-left: 30px;
+        }
+        
+        ul>h2 {
+            margin-left: 30px;
+        }
+        
+        nav img {
+            width: 90px;
+            cursor: pointer;
+            padding: -10px
+        }
+        
+        ul {
+            display: flex;
+            margin-top: 1%;
+            margin-right: 3%;
+            margin-bottom: 1%;
+            align-items: center;
+        }
+        
+        ul li {
+            list-style: none;
+            padding: 5px 10px;
+            margin-left: 5px;
+            cursor: pointer;
+        }
+        
+        ul li a {
+            text-decoration: none;
+            font-size: 20px;
+        }
+        
+        ul li:hover {
+            background-color: #2196F3;
+            border: none;
+        }
+        
+        .active {
+            background-color: #2196F3;
+            color: white;
+        }
+        
+        ul h2 {
+            margin-top: 5px;
+        }
+        /* -------------Container-------------- */
+        
+        .show-create-question,
+        .show-title-quiz {
+            margin-top: 30px;
+            padding: 10px;
+            border-radius: 10px;
+            border-top: 7px solid #2196F3;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+        }
+        
+        .container button {
+            border: none;
+            padding: 10px;
+        }
+        /* ----------------------------- Display question   --------------------------   */
+        
+        input {
+            width: 90%;
+            display: block;
+            font-size: 1.1rem;
+            margin-top: 0.5rem;
+            margin-bottom: 0.5rem;
+            border: none;
+            border-bottom: 1px solid #dbe2e7;
+        }
+        
+        input:focus {
+            transition: 0.5s;
+            /* background-color: #f0e6fd; */
+            outline: none;
+            border-bottom: 2px solid #2196F3;
+        }
+        
+        .form-group {
+            width: 100%;
+            display: flex;
+            align-items: center;
+        }
+        
+        .form-group .correct {
+            width: 5%;
+        }
+        
+        .form-group .as {
+            width: 84%;
+        }
+        /* --------------------SIGN IN / SIGN UP ----------------*/
+        
+        body {
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(120deg, #3292F4, #db94f3);
+        }
+        
+        .container {
+            background: #ebf5ff;
+            box-sizing: border-box;
+            padding-bottom: 1px;
+        }
+        
+        .b-radius {
+            border-radius: 30px;
+        }
+        
+        .go-sign-up,
+        .go-sign-in {
+            cursor: pointer;
+            text-decoration: underline;
+        }
+        
+        .go-sign-up:hover,
+        .go-sign-in:hover {
+            text-decoration: none;
+            color: white;
+        }
+        /*---------------- Display question ----------------- */
+        
+        .displayQuestion {
+            margin-bottom: 100px;
+            text-align: center;
+            background: none;
+        }
+        
+        .show-question-answers {
+            background: #fff;
+            border-radius: 5px;
+        }
+        
+        .card {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+            margin: 20px;
+            padding: 10px;
+            border: 1px solid var(--main-color-light);
+            background-color: white;
+            border-radius: 15px;
+        }
+        
+        .title {
+            padding: 20px;
+        }
+        
+        .actions {
+            width: 10%;
+            display: flex;
+            justify-content: space-between;
+            padding: 5px;
+            cursor: pointer;
+        }
+        
+        .actions img {
+            width: 30%;
+        }
+        
+        .answers {
+            width: 75%;
+            margin: auto;
+            /* display: flex;
+            flex-direction: column;
+            margin-left: 13%; */
+            display: grid;
+            gap: 1rem;
+            grid-template-columns: auto auto;
+            padding: 10px;
+        }
+        
+        .answerDisplay {
+            background: rgb(240, 3, 3);
+            border-radius: 5px;
+            padding: 10px;
+            margin: 5px;
+            color: #fff;
+            box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+        }
+        
+        .displayQuestion .edit {
+            width: 5%;
+            margin-right: 10px;
+            background: blue;
+            border-radius: 5px;
+        }
+        
+        .displayQuestion .delete {
+            width: 5%;
+            margin-left: 18px;
+            background: red;
+            border-radius: 5px;
+        }
