--- a/public/views/create_edit_question_view/create_edit_question_view.html
+++ b/public/views/create_edit_question_view/create_edit_question_view.html
@@ -5,39 +5,64 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz</title>
-        <!-- Latest compiled and minified CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../../css/style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container b-radius create-question p-3">
-        <h2 class="w-100 text-center mb-4">Create Question</h2>
-        <div class="mb-5">
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Title of question">
-        </div>
-        <!-- <h5>Put your answers here:</h5> -->
-        <div class="mb-2  m-auto">
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Answer 1">
-        </div>
-        <div class="mb-2">
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Answer 2">
-        </div>
-        <div class="mb-2">
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Answer 3">
-        </div>
-        <div class="mb-2">
-            <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Answer 4">
-        </div>
-        <div class="btn-send w-100 ">
-            <button id="cancel ">Cancel</button>
-            <button id="create">Create</button>
-        </div>
+    <nav>
+        <ul>
+            <a href="../../index.html"><img src="../../images/quiz_logo.png" /></a>
+            <h2>Quiz App</h2>
+        </ul>
+        <ul>
+            <li class="active"><a href="edit.html">Edit quiz</a></li>
+            <li><a href="../play/play.html">Play quiz</a></li>
+        </ul>
+    </nav>
+    <div class="container mt-3 show-title-quiz">
+        <label style="font-size:25px">Title Quiz</label>
+        <input id="title" type="text" placeholder="Question title" class="as" />
     </div>
-    <script src="create_edit_question_view.js"></script>
+    <div class="container show-create-question">
+        <header style="font-size:35px;text-align:center">Create new question</header>
+        <section>
+            <label style="font-size:25px">Question</label>
+            <input id="title" type="text" placeholder="Question title" class="as" />
+            <label style="font-size:20px">Answers</label>
+            <div class="form-group">
+                <input type="radio" class="correct" name="correct" id="correctA" value="A"><span></span>
+                <input id="choiceA" type="text" placeholder="AnswerA" class="as" />
+            </div>
+            <div class="form-group">
+                <input type="radio" class="correct" name="correct" id="correctB" value="B">
+                <input id="choiceB" type="text" placeholder="Answer B" class="as" />
+            </div>
+            <div class="form-group">
+                <input type="radio" class="correct" name="correct" id="correctC" value="C">
+                <input id="choiceC" type="text" placeholder="Answer C" class="as" />
+            </div>
+            <div class="form-group">
+                <input type="radio" class="correct" name="correct" id="correctD" value="D">
+                <input id="choiceD" type="text" placeholder="Answer D" class="as" />
+            </div>
+        </section>
+        <menu>
+            <button id="cancel">Cancel</button>
+            <button id="create">Create</button>
+        </menu>
+    </div>
+    <div class="displayQuestion container">
+
+    </div>
 </body>
+<script src="create_edit_question_view.js"></script>
+
 </html>
