--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -12,6 +12,16 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <a href="../../index.html"><img src="../../images/quiz_logo.png" /></a>
+            <h2>Quiz App</h2>
+        </ul>
+        <ul>
+            <li class="active"><a href="edit.html">Edit quiz</a></li>
+            <li><a href="../play/play.html">Play quiz</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <div class="row grid  gap-2" id="quiz">
 
@@ -38,7 +48,7 @@
         </div>
     </div>
     <div class="container" id="show-good-bad-answers">
-        <h2 class="w-100 text-center">Corrections of this Quiz</h2>
+        <h2 class="w-100 my-3 text-center">Corrections of this Quiz</h2>
       </div>
     <script src="play_quiz_view.js"></script>
 </body>
