--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@
  ul li a {
      text-decoration: none;
      font-size: 20px;
+     color: #2196F3;
  }
  
  ul li:hover {
@@ -201,7 +202,7 @@
  .displayQuestion .edit {
      width: 5%;
      margin-right: 10px;
-     background: blue;
+     background: #2196F3;
      border-radius: 5px;
  }
  
