--- a/public/views/create_edit_question_view/create_edit_question_view.html
+++ b/public/views/create_edit_question_view/create_edit_question_view.html
@@ -16,7 +16,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
-
 <body>
     <nav>
         <ul>
@@ -25,38 +24,40 @@
         </ul>
         <ul>
             <li class="active"><a href="edit.html">Edit quiz</a></li>
-            <li><a href="../play/play.html">Play quiz</a></li>
+            <li><a href="../play/play.html">Play quiz</a></li>           
         </ul>
     </nav>
     <div class="container mt-3 show-title-quiz">
         <label style="font-size:25px">Title Quiz</label>
-        <input id="titleQUestion" type="text" placeholder="Question title" class="as" />
+        <input id="titleQUestion" type="text" placeholder="Question title" class="as p-2 b-radius" />
+        <a href="../../index.html" class="px-4 py-2 btn bg-secondary b-radius">Cancel</a>
+        <button id="btn-create-quiz" class="px-4 py-2 b-radius mb-3 mt-4 bg-info" >Create</button>
     </div>
+
     <div class="container show-create-question">
         <header style="font-size:35px;text-align:center">Create new question</header>
         <section>
             <label style="font-size:25px">Question</label>
             <input id="title" type="text" placeholder="Question title" class="as" />
             <label style="font-size:20px">Answers</label>
-            <div class="form-group">
+            <div class="form-group m-auto">
                 <input type="radio" class="correct" name="correct" id="correctA" value="A"><span></span>
                 <input id="choiceA" type="text" placeholder="AnswerA" class="as" />
             </div>
-            <div class="form-group">
+            <div class="form-group m-auto">
                 <input type="radio" class="correct" name="correct" id="correctB" value="B">
                 <input id="choiceB" type="text" placeholder="Answer B" class="as" />
             </div>
-            <div class="form-group">
+            <div class="form-group m-auto">
                 <input type="radio" class="correct" name="correct" id="correctC" value="C">
                 <input id="choiceC" type="text" placeholder="Answer C" class="as" />
             </div>
-            <div class="form-group">
+            <div class="form-group m-auto">
                 <input type="radio" class="correct" name="correct" id="correctD" value="D">
                 <input id="choiceD" type="text" placeholder="Answer D" class="as" />
             </div>
         </section>
         <menu>
-            <button id="cancel">Cancel</button>
             <button id="create">Create</button>
         </menu>
     </div>
@@ -64,6 +65,6 @@
 
     </div>
 </body>
-<script src="create_edit_question_view.js"></script>
+<script src="create_edit_question_view.js" type="module"></script>
 
 </html>
