--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -41,7 +41,14 @@
                 </div>
             </div>
         </div>
-        <h1 class ="text-center w-100" id="no-data"> No question Hear! </h1>
+        <div id="no-data" class="container">
+            <span class="back-from-noquestion bg-secondary text-white">Back</span>
+            <br>
+            <div class="contain-img">
+                <img src="../../images/no-question.png" alt="">
+            </div>
+        </div>
+        
     </div>
     <div class="container show-score mt-5">
         <button class = "b-radius borer-1 px-3 py-1 border-success" id="btn-good-bad-answer">Show Corrections</button>
@@ -55,7 +62,7 @@
     </div>
     <div class="container " id="show-good-bad-answers">
         <div class="d-flex  justify-content-between mt-4 mb-4">
-            <span id="back-from-show-correction" class="bg-secondary">Back</span>
+            <span id="back-from-show-correction" class="text-white bg-secondary">Back</span>
             <h2 class="my-3bg-danger">Corrections of this Quiz</h2>
         </div>
     </div>
