--- a/public/views/create_edit_question_view/create_edit_question_view.html
+++ b/public/views/create_edit_question_view/create_edit_question_view.html
@@ -20,19 +20,20 @@
 <body>
     <nav>
         <ul>
-            <a href="../../index.html"><img src="../../images/quiz_logo.png" /></a>
-            <h2>Group-12</h2>
+            <a href="../../index.html"><img src="../../images/logo2.png" /></a>
+            <h3>Quiz App</h3>
         </ul>
         <ul>
             <li class="active"><a href="edit.html">Edit quiz</a></li>
             <li><a href="../play/play.html">Play quiz</a></li>           
         </ul>
     </nav>
-    <div class="container mt-3 show-title-quiz">
+    <div class="container show-title-quiz">
         <label style="font-size:25px">Title Quiz</label>
+        <div class="hr"></div>
         <input id="titleQUestion" type="text" placeholder="Question title" class="as p-2 b-radius" />
-        <a href="../../index.html" class="px-4 py-2 btn bg-secondary b-radius">Cancel</a>
-        <button id="btn-create-quiz" class="px-4 py-2 b-radius mb-3 mt-4 bg-info" >Create</button>
+        <a href="../../index.html" class="btn-cancel-quiz">Cancel</a>
+        <button id="btn-create-quiz" class="btn-create-quizs" >Create</button>
     </div>
 
     <div class="container show-create-question">
