--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-     background: #00ffcc /*linear-gradient(hsl(168, 100%, 50%), , #db94f3); */
+    background: #61b0da;/*linear-gradient(hsl(168, 100%, 50%), , #db94f3); */
 }
  .b-radius {
      border-radius: 10px;
@@ -12,18 +12,22 @@ body {
      display: flex;
      justify-content: space-between;
      align-items: center;
-     box-shadow: rgba(0, 0, 0, 0.18) 0px 2px 4px;
-     background-color: #fff;
+     box-shadow:0 1px 0.5rem black;
+     background-color: rgb(231, 224, 224);
      position: sticky;
      top: -5px;
  }
  
  ul img {
      margin-left: 30px;
+    width: 15px;
  }
  
- ul>h2 {
-     margin-left: 30px;
+ ul>h3 {
+     margin-left: 8px;
+     margin-top: 10px;
+  
+     
  }
  
  nav img {
@@ -99,6 +103,31 @@ body {
  ul h2 {
      margin-top: 5px;
  }
+ /* play quiz */
+ .play-quiz,.create-quiz{
+     border-top: 8px solid #1736e8;
+     width: 35%;
+     height: 60vh;
+     margin-top: 1rem;
+     background: rgb(134, 193, 46);
+     padding: 1rem;
+     border-radius: 7px;
+     box-shadow:0 2px 0.3rem black;
+     
+ }
+ .play-quiz:hover,.create-quiz:hover{
+    box-shadow: 0 0.2rem 0.7rem black;
+ }
+.create-quiz img{
+
+     height: 40vh;
+     width: 100%;
+ }
+ .play-quiz img{
+    width: 100%;
+     height:40vh;
+ }
+
  /* -------------Container-------------- */
  
  .show-create-question,
@@ -106,14 +135,25 @@ body {
      margin-top: 30px;
      padding: 10px;
      border-radius: 10px;
-     border-top: 7px solid #2196F3;
+     background: rgb(121, 181, 32);
+    border-top: 5px solid rgb(228, 184, 8);
      box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
  }
  
  .container button {
      border: none;
-     padding: 10px;
+     padding: 9.8px 1.7rem;
+     margin-top: 0.6rem;
+     margin-left: 0.5rem;
+    
  }
+ .container button:hover {
+    background: rgb(125, 162, 244);
+   
+
+}
+
+
  /* ----------------------------- Display question   --------------------------   */
  
  input {
@@ -128,7 +168,7 @@ body {
  
  input:focus {
      transition: 0.5s;
-     /* background-color: #f0e6fd; */
+     
      outline: none;
      border-bottom: 2px solid #2196F3;
  }
@@ -154,9 +194,12 @@ body {
      padding: 10px;
      margin: auto;
      border-radius: 4px;
+     
  }
  #title-quiz{
     padding: 0.3rem;
+ 
+   
 
  }
  section #title{
@@ -185,6 +228,7 @@ body {
  .show-question-answers {
      background: #fff;
      border-radius: 5px;
+   
  }
  
  .card {
@@ -299,18 +343,33 @@ color: white;
 
 #back-from-show-correction, .back-from-noquestion {
     font-size: 20px;
-    width: 100px;
+    background: rgb(96, 101, 99);
     text-align: center;
-    padding: 5px 15px ;
-    border-radius: 5px;
+    padding: 7px 30px ;
+    color: #fff;
     cursor: pointer;
+
 }
+
+
+#no-data{
+    padding-top: 2rem;
+}
+#back-from-show-correction:hover, .back-from-noquestion:hover {
+    background: rgb(228, 184, 8);
+}
+.back-btn-correction{
+    margin-top: 1rem;
+    width: 12%;
+    height: 7.5vh;
+}
+
 
 .quiz-title {
     font-size: 30px;
     width: 110%;
     padding: 10px;
-    background: #0cce74;
+    background: rgb(134, 193, 46);
     display: flex;
     height: 200px;
     justify-content: center;
@@ -396,7 +455,101 @@ color: white;
      margin-top: -1rem;
      
  }
+ /* display quiz */
+ .title-quiz{
+    margin-top: 1.5rem;
+    text-align: center;
+    text-shadow:0 1px 0.3rem #c0c0be;
+ }
+ #dom-show-quiz{
+     margin-bottom: 1rem;
  
+ }
+ #dom-show-quiz #quiz{
+     margin-top: 0.5rem;
+ }
+ .btn-find-quiz{
+     background: rgb(228, 184, 8);
+     width: 12%;
+ }
+ .btn-find-quiz:hover{
+     background: rgb(227, 221, 210);
+ }
+
+
+ #btn-good-bad-answer{
+     padding: 40px 10px;
+     background: rgb(228, 184, 8);
+
+ }
+ #btn-good-bad-answer:hover{
+    background: rgb(96, 101, 99);
+    color:#fff;
+    
+
+    
+}
+.btn-send{
+    margin-top: 1rem;
+}
+.btn-send #cancel{
+    margin-right: 15px;
+    background: rgb(96, 101, 99);
+    color:#fff;
+}
+
+.list-of-orrection{
+    font-size: 1.4rem;
+    margin-top: 2rem;
+    color: rgb(51, 51, 51);
+}
+
+/* create quiz */
+.show-title-quiz{
+    margin-top: 3rem;
+    background: rgb(134, 193, 46);
+    border-top: 5px solid rgb(228, 184, 8);
+    padding: 1rem 2rem;
+
+}
+.show-title-quiz input{ 
+    background: rgb(128, 174, 58);
+    border: none;
+    width: 95%;
+   
+
+}
+.show-title-quiz .hr{
+    height: 2px;
+    background: #000;
+    width: 95%;
+
+}
+.btn-cancel-quiz{
+    text-decoration: none;
+    color: #fff;
+    background: rgb(96, 96, 96);
+    padding: 0.7rem 1rem;
+    margin-top: 1rem;
+
+}
+.btn-cancel-quiz:hover{
+    text-decoration: none;
+    background: rgb(230, 82, 37);
+    color: #fff;
+
+ 
+
+}
+.btn-create-quizzs{
+    width: 10%;
+    margin-top: -5px;
+}
+#back-from-show-correction{
+    background: rgb(222, 205, 14);
+
+}
+
 
  @media (max-width: 768px) {
      .create-question {
