--- a/public/css/style.css
+++ b/public/css/style.css
@@ -549,7 +549,12 @@ color: white;
     background: rgb(222, 205, 14);
 
 }
-
+#sign-in{
+    margin-left: -1px;
+}
+#sign-up{
+    margin-left: -1px;
+}
 
  @media (max-width: 768px) {
      .create-question {
