--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="../../css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
 </head>
 
 <body>
@@ -62,8 +63,11 @@
     </div>
     <div class="container show-score mt-5">
         <button class = "px-3 py-1 border-success" id="btn-good-bad-answer">Show Corrections</button>
-        <h1 class = "text-center m-auto ">Your score is:</h1>
-        <h1 class = "score m-auto text-center w-auto"> 90% </h1>
+        <div id="show-score">
+            <h1 class = "text-center m-auto ">Your score is:</h1>
+            <h1 class = "score m-auto text-center w-auto"> 90% </h1>
+            
+        </div>
 
         <div class="btn-send w-100  d-flex justify-content-center">
             <button class = " px-4 py-2"id="cancel">Cancel</button>
