--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -70,11 +70,12 @@
             <button class = " px-4 py-2" id="play-again">Play again</button>
         </div>
     </div>
-    <div class="container " id="show-good-bad-answers">
+    <div class="container" id = "contain-good-bad-answers">
         <div class="d-flex  justify-content-between mt-4 mb-4">
             <p id="back-from-show-correction" class="back-btn-correction">Back<p>
-                
             <h2 class="list-of-orrection">Corrections of this Quiz</h2>
+        </div>
+        <div class="" id="show-good-bad-answers">
         </div>
     </div>
     <div class="container show-edit-quiz">
