--- a/public/css/style.css
+++ b/public/css/style.css
@@ -555,6 +555,9 @@ color: white;
 #sign-up{
     margin-left: -1px;
 }
+.control-one-quiz{
+    width: 95%;
+}
 
  @media (max-width: 768px) {
      .create-question {
