--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,10 @@ body {
      margin-left: 30px;
     width: 15px;
  }
- 
+.search {
+    width: 300px;
+}
+
  ul>h3 {
      margin-left: 8px;
      margin-top: 10px;
@@ -558,6 +561,23 @@ color: white;
 .control-one-quiz{
     width: 95%;
 }
+
+.show-history{
+    font-size: 1.3rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
  @media (max-width: 768px) {
      .create-question {
