--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="../../css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.3/jspdf.min.js"></script>
 </head>
@@ -21,20 +22,25 @@
             <h3>Quiz App</h3>
         </ul>
         <ul>
-            <li class="active user-name">67890</li>
+            <a href="../histroy_view/history_view.html">Showing History</a>
+            <form>
+                <input class="form-control search me-2"  placeholder="Search" >
+            </form>
+            <li class="active user-name">Khy</li>
         </ul>
     </nav>
     <div class="container contain-quizzes">
         <div id="dom-show-quiz" >
             <h3 class="title-quiz">List of Quizzes</h3>
             <button class="btn-find-quiz">My Quiz</button>
+            <a href="../../../histroy_view/history_view.html">Showing History</a>
             <div class="row grid  gap-2" id="quiz">
-                
+
             </div>
         </div>
         <div id="dom-my-quiz" >
             <h3 class="title-quiz">List of My Quizzes</h3>
-            <button class="btn-back-to-all-quiz">All Quizzes</button>
+            <button class="btn-back-to-all-quiz">Back</button>
             <div class="row grid  gap-2" id="myquiz">
                 
             </div>
@@ -47,8 +53,8 @@
                 <button id="answer-C" onclick="clickAnswer('C')" class="grid-item">My Answer C</button>
                 <button id="answer-D" onclick="clickAnswer('D')" class="grid-item">My Answer D</button>
             </div>
-            <div id="progress-bar" class="w-100 bg-primary h-25">
-                <div class="index-question">
+            <div id="progress-bar" class="w-100 b-radius bg-primary h-25">
+                <div class="index-question b-radius pl-1">
                 </div>
             </div>
         </div>
