#29 show history of the quiz score #30 search quizzes

--- a/public/views/create_edit_question_view/create_edit_question_view.html
+++ b/public/views/create_edit_question_view/create_edit_question_view.html
@@ -31,8 +31,8 @@
         <label style="font-size:25px">Title Quiz</label>
         <div class="hr"></div>
         <input id="titleQUestion" type="text" placeholder="Question title" class="as p-2 b-radius" />
-        <a href="../../index.html" class="btn-cancel-quiz">Cancel</a>
-        <button id="btn-create-quiz" class="btn-create-quizs" >Create</button>
+        <a href="../../index.html" class="btn btn-cancel-quiz">Cancel</a>
+        <button id="btn-create-quiz" class="btn btn-create-quizs" >Create</button>
     </div>
 
     <div class="container show-create-question">
@@ -58,14 +58,13 @@
             </div>
             <div class="text-danger validationchoice" id="validationChoiceC"></div>
             <div class="form-group">
-
                 <input type="radio" class="correct" name="correct" id="correctD" value="D">
                 <input id="choiceD" type="text" placeholder="Answer D" class="as" />
             </div>
             <div class="text-danger validationchoice" id="validationChoiceD"></div>
         </section>
         <menu>
-            <button id="create">Create</button>
+            <button class="btn" id="create">Create</button>
         </menu>
     </div>
     <div class="displayQuestion container">
