--- a/public/css/style.css
+++ b/public/css/style.css
@@ -388,29 +388,20 @@ text-decoration: none;
 color: white;
 }
  
- .grid {
-     display: grid;
-     grid-template-columns:  auto auto auto;
-     gap: 10px;
-     padding: 10px;
-     box-sizing: border-box;
- }
- 
- .col {
-     font-size: 30px;
-     width: 110%;
-     padding: 10px;
-     background: #0cce74;
-     display: flex;
-     height: 200px;
-     justify-content: center;
-     align-items: center;
-     border-radius: 5px;
-     cursor: pointer;
-     box-sizing: border-box;
- }
 
-
+.control-one-quiz{
+     width: 29% ;
+     margin-bottom: 0.5rem;
+}
+#quiz, #myquiz{
+    margin-top: 0.5rem;
+    width: 100%;
+    display: flex;   
+    padding: 10px;
+    box-sizing: border-box;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
 #back-from-show-correction, .back-from-noquestion {
     font-size: 20px;
     background: rgb(96, 101, 99);
@@ -420,7 +411,14 @@ color: white;
     cursor: pointer;
 
 }
+.btn-history{
+    height: 50px;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
+}
 
 #no-data{
     padding-top: 2rem;
@@ -509,9 +507,12 @@ color: white;
     justify-content: center;
     align-items: center; */
  }
- 
+ #show-score h1{
+     color: #f5c20b;
+ }
  .score {
      font-size: 130px;
+     color:#f5c20b;
  }
  
  .create-question {
@@ -546,9 +547,7 @@ color: white;
      margin-bottom: 1rem;
  
  }
- #dom-show-quiz #quiz{
-     margin-top: 0.5rem;
- }
+
  .btn-find-quiz{
      background: rgb(228, 184, 8);
      width: 12%;
@@ -565,11 +564,15 @@ color: white;
  }
  #btn-good-bad-answer:hover{
     background: rgb(96, 101, 99);
-    color:#fff;
-    
-
-    
+    color:#fff; 
 }
+.btn-cancel-quiz{
+    height: 43px;
+    /* margin-top: px; */
+    margin-bottom: 10px;
+}
+
+
 .btn-send{
     margin-top: 2.8rem;
 }
@@ -680,9 +683,6 @@ color: white;
 }
 #sign-up{
     margin-left: -1px;
-}
-.control-one-quiz{
-    width: 95%;
 }
 .contain-img img{
   
