--- a/public/views/play_quiz_view/play_quiz_view.html
+++ b/public/views/play_quiz_view/play_quiz_view.html
@@ -22,7 +22,6 @@
             <h3>Quiz App</h3>
         </ul>
         <ul>
-            <a href="../histroy_view/history_view.html">Showing History</a>
             <form>
                 <input class="form-control search me-2"  placeholder="Search" >
             </form>
@@ -32,15 +31,14 @@
     <div class="container contain-quizzes">
         <div id="dom-show-quiz" >
             <h3 class="title-quiz">List of Quizzes</h3>
-            <button class="btn-find-quiz">My Quiz</button>
-            <a href="../../../histroy_view/history_view.html">Showing History</a>
-            <div class="row grid  gap-2" id="quiz">
+            <button class="btn btn-find-quiz">My Quiz</button>
+            <div class="grid " id="quiz">
 
             </div>
         </div>
         <div id="dom-my-quiz" >
             <h3 class="title-quiz">List of My Quizzes</h3>
-            <button class="btn-back-to-all-quiz">Back</button>
+            <button class="btn btn-back-to-all-quiz">Back</button>
             <div class="row grid  gap-2" id="myquiz">
                 
             </div>
@@ -59,7 +57,7 @@
             </div>
         </div>
         <div id="no-data" class="container">
-            <span class="back-from-noquestion">Back</span>
+            <span class="btn back-from-noquestion">Back</span>
             <br>
             <div class="contain-img">
                 <img src="../../images/no-question.png" alt="">
@@ -72,17 +70,16 @@
         <div id="show-score">
             <h1 class = "text-center m-auto ">Your score is:</h1>
             <h1 class = "score m-auto text-center w-auto"> 90% </h1>
-            
         </div>
-
         <div class="btn-send w-100  d-flex justify-content-center">
-            <button class = " px-4 py-2"id="cancel">Cancel</button>
-            <button class = " px-4 py-2" id="play-again">Print</button>
+            <button class = "btn px-4 py-2"id="cancel">Cancel</button>
+            <a class = "btn bg-white btn-history px-2" href="../histroy_view/history_view.html"> History</a>
+            <button class = "btn px-4 py-2" id="play-again">Print</button>
         </div>
     </div>
     <div class="container" id = "contain-good-bad-answers">
         <div class="d-flex  justify-content-between mt-4 mb-4">
-            <p id="back-from-show-correction" class="back-btn-correction">Back<p>
+            <p id="back-from-show-correction" class="btn back-btn-correction">Back<p>
             <h2 class="list-of-orrection">Corrections of this Quiz</h2>
         </div>
         <div class="" id="show-good-bad-answers">
@@ -92,8 +89,8 @@
         <label style="font-size:25px">Title Quiz</label>
         <div class="hr"></div>
         <input id="title-question" type="text" placeholder="Question title" class="as p-2 b-radius" />
-        <a href="../../index.html" class="btn-cancel-quiz">Cancel</a>
-        <button id="btn-create-quiz" class="btn-edit-quiz" >Edit</button>
+        <a href="../../index.html" class="btn btn-cancel-quiz">Cancel</a>
+        <button id="btn-create-quiz" class="btn btn-edit-quiz" >Edit</button>
     </div>
     <script src="play_quiz_view.js" type=""></script>
 </body>
