updeta app for hosting

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,24 +9,20 @@ body {
  }
  /* ------------------------------Menu--------------------- */
  
- nav {
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     box-shadow:0 1px 0.5rem black;
-     background-color: rgb(231, 224, 224);
-     position: sticky;
-     top: -5px;
- }
- 
+#navbar-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow:0 1px 0.5rem black;
+    position: sticky;
+    top: -5px;
+    background: rgb(223, 214, 214);
+}
+
  ul img {
      margin-left: 30px;
     width: 15px;
  }
-.search {
-    width: 300px;
-}
-
  ul>h3 {
      margin-left: 8px;
      margin-top: 10px;
@@ -50,6 +46,9 @@ body {
 #no-data div img {
     margin: auto;
 
+}
+.search{
+    min-width: 400px;
 }
 .control-img img {
     width: 200px;
@@ -93,20 +92,15 @@ body {
  }
  
  ul li:hover {
-     background-color: #2196F3;
+     color: #fff;
      border: none;
  }
- 
- .active {
-     background-color: #2196F3;
-     color: white;
- }
- 
+  
  ul h2 {
      margin-top: 5px;
  }
  /* play quiz */
- .play-quiz,.create-quiz{
+ .play-quiz, .create-quiz{
      border-top: 8px solid #f5c20b;
      width: 35%;
      height: 60vh;
@@ -138,6 +132,18 @@ body {
     width: 100%;
      height:40vh;
  }
+ .logo-title{
+     margin-top: 0.6rem;
+     font-size: 1.65rem;
+ }
+.user-name{
+    /* font-size: 1rem; */
+    width: 100%;
+    margin-left: 1.3rem;
+    font-weight: 600;
+    font-size: 1.2rem;
+    margin-right: 10px;
+}
 
  /* -------------Container-------------- */
  
@@ -156,7 +162,7 @@ body {
 }
 .show-create-question .validationchoice{
    
-    margin-top: -1.3rem;
+    margin-top: 0rem;
 }
 .show-create-question #create{
     background:#f5c20b;
@@ -323,20 +329,7 @@ body {
  
  .actions img {
      width: 30%;
- }
- 
- .answers {
-     width: 75%;
-     margin: auto;
-     /* display: flex;
-            flex-direction: column;
-            margin-left: 13%; */
-     display: grid;
-     gap: 1rem;
-     grid-template-columns: auto auto;
-     padding: 10px;
- }
- 
+ } 
  .answerDisplay {
      background: rgb(240, 3, 3);
      border-radius: 5px;
@@ -391,10 +384,6 @@ color: white;
 }
  
 
-.control-one-quiz{
-     width: 29% ;
-     margin-bottom: 0.5rem;
-}
 #quiz, #myquiz{
     margin-top: 0.5rem;
     width: 100%;
@@ -403,6 +392,10 @@ color: white;
     box-sizing: border-box;
     justify-content: space-around;
     flex-wrap: wrap;
+}
+.control-one-quiz{
+     width: 29% ;
+     margin-bottom: 0.5rem;
 }
 #back-from-show-correction, .back-from-noquestion {
     font-size: 20px;
@@ -421,6 +414,9 @@ color: white;
     align-items: center;
 
 }
+.show-history th{
+    color:rgb(228, 184, 8);
+}
 
 #no-data{
     padding-top: 2rem;
@@ -429,9 +425,7 @@ color: white;
     background: rgb(228, 184, 8);
 }
 .back-btn-correction{
-    margin-top: 1rem;
-    width: 11%;
-   
+    margin-top: 1rem;   
 }
 #back-from-show-correction:hover{
     background: rgb(8, 162, 228);
@@ -466,11 +460,12 @@ color: white;
     width: 99%;
 }
  .answers {
+     margin: auto;
      display: grid;
      grid-template-columns: auto auto;
      gap: 10px;
      margin-top: 3rem;
-    
+     width: 75%;
  }
  
 .grid-item {
@@ -552,7 +547,7 @@ color: white;
 
  .btn-find-quiz{
      background: rgb(228, 184, 8);
-     width: 12%;
+     /* width: %; */
  }
  .btn-find-quiz:hover{
      background: rgb(227, 221, 210);
@@ -642,22 +637,18 @@ color: white;
     background: rgba(228, 233, 220, 0.939);
     border: none;
     width: 95%;
-   
-
 }
 .show-title-quiz .hr{
     height: 2px;
     background: #000;
     width: 95%;
-
 }
 .btn-cancel-quiz{
     text-decoration: none;
     color: #fff;
     background: rgb(96, 96, 96);
-    padding: 0.7rem 1rem;
-    margin-top: 1rem;
-
+    padding: 0.5rem 1rem;
+    margin-top: 1.2rem;
 }
 .btn-cancel-quiz:hover{
     text-decoration: none;
@@ -669,7 +660,7 @@ color: white;
 }
 .btn-create-quizzs{
     width: 10%;
-    margin-top: -5px;
+    margin-top: -1.8rem;
 }
 #back-from-show-correction{
     background: rgb(222, 205, 14);
@@ -697,7 +688,21 @@ color: white;
     font-size: 1.3rem;
 }
 
-
+.show-edit-quiz{
+    background: rgba(244, 237, 237, 0.711);
+    margin-top: 2rem;
+    border-top: 5px solid rgb(222, 205, 14);
+    border-radius: 7px;
+    width: 70%;
+}
+.show-edit-quiz .hr{
+    width: 95%;
+    height: 2px;
+    background: #000;
+}
+.show-edit-quiz .btn-edit-quiz{
+    background: rgb(248, 205, 13);
+}
 
 
 
@@ -711,7 +716,90 @@ color: white;
 
 
  @media (max-width: 768px) {
-     .create-question {
-         width: 100%;
-     }
+   
+    .create-question {
+        width: 100%;
+    }
+    .contain-link{
+        display: block;
+    }
+    .play-quiz, .create-quiz{
+        margin: auto;
+        border-top: 8px solid #f5c20b;
+        width: 70%;
+        height: 60vh;
+        margin-top: 1rem;
+        background: rgba(244, 237, 237, 0.711);
+        padding: 1rem;
+        border-radius: 7px;
+        box-shadow:0 2px 0.3rem black;
+        
+    }
+    .contain-question{
+        width: 100%;
+    }
+    .answers {
+        margin: auto;   
+        display: block;
+        padding: 10px;
+        width: 100%;
+    }
+    .grid-item{
+        height: 90px;
+        width: 95%;
+    }
+    .control-one-quiz{
+        width: 45% ;
+        margin-bottom: 0.5rem;
+   }
+   .container{
+       width: 100%;
+   }
+   .contain-sign-in, .contain-sign-up{
+    width: 70%;
+    
+}
+   #quiz, #myquiz{
+    margin-top: 0.5rem;
+    width: 100%;
+    display: block;   
+    padding: 0px;
+    }
+    .control-one-quiz{
+        width: 90%;
+        margin:10px 0 ;
+    }
+    #show-good-bad-answers div{
+        width: 100%;
+    }
+    .show-title-quiz{
+        border-radius: 0;
+        margin-top: 5px;
+    }
+    .logo-title{
+        display: none;
+    }
+    .search{
+        width: 20%;
+    }
+    .show-edit-quiz{
+        width: 90%;
+    }
+    .show-title-quiz{
+        width: 90%;
+        border-radius: 7px;
+        margin-top: 1rem;
+    }
+    .show-create-question{
+        width: 90%;
+    }
+    .show-question-answers {
+        width: 100%;
+    }
+    .search{
+        min-width: 200px;
+    }
+    #show-good-bad-answers div{
+        padding: 0.6rem;
+    }
  }
