--- a/public/views/histroy_view/history_view.html
+++ b/public/views/histroy_view/history_view.html
@@ -7,29 +7,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>History</title>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../css/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 
 <body>
-    <nav>
-        <ul>
-            <a href="../../index.html"><img src="../../images/logo2.png" /></a>
-            <h3>Quiz App</h3>
-        </ul>
-        <ul>
-            <li class="active user-name">67890</li>
-        </ul>
+    <nav id="navbar-menu" class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <div class="d-flex">
+                <a href="../../index.html"><img src="../../images/logo2.png" /></a> 
+                <h2 class="logo-title">Quiz App</h2>
+            </div>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            </ul>
+        </div>
+        <form class="d-flex">
+          <button class="border-0 bg-sm-none user-name">67890</button>
+        </form>
+        </div>
     </nav>
     <div class="container">
-        <a class="btn btn-secondary mt-2 back-from-history text-white  fs-2" href="../play_quiz_view/play_quiz_view.html">Back</a>
+        <a class="btn btn-warning mt-2 back-from-history text-white px-3 py2" href="../play_quiz_view/play_quiz_view.html">Back</a>
         <table class="table show-history w-75 m-auto" id="show-history">
             <thead>
                 <tr>
